<resources>
    <string name="app_name">Pocketbook</string>
    <string name="title_activity_view_my_book">ViewMyBookActivity</string>
    <string name="view_my_book_tab_1_title">Book</string>
    <string name="profileTab1">Owner</string>
    <string name="profileTab2">Borrower</string>
    <string name="view_my_book_tab_2_title">Requests</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="add_book">Add Book</string>
    <string name="book_cover_image">Book Cover Image</string>
    <string name="scan">Scan</string>
    <string name="profile">Profile</string>
    <string name="isbn_text">ISBN: %1$s</string>
    <string name="added_by_text">Added By: %1$s</string>
    <string name="condition_text">Condition: %1$s</string>
    <string name="comment_text">Comment: %1$s</string>
    <string name="borrowed_book_text">Borrower: %1$s</string>
    <string name="accepted_book_text">Accepted: %1$s</string>
...
    <string name="new_profile_firstlastname">firstlastname</string>
    <string name="owner">Owner</string>
    <string name="ownedBooks">Owned Books</string>
    <string name="borrower">Borrower</string>
    <string name="addBookFragmentTitle">Add New Book</string>
    <string name="new_to_pocketbook">New to Pocketbook?</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="book_status_image">book_status_image</string>
    <string name="owned_by_you">Owned by You</string>
    <string name="notAvailable">Not Available</string>
...
