...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textBlack">


    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/signup_custom"
        android:text="@string/login"
        android:textColor="@color/textWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordReg" />



    <Button
        android:id="@+id/RegisterBtn"
        android:layout_width="0dp"
...
        android:inputType="textPassword"
        android:padding="16dp"
        android:radius="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserReg" />

    <EditText
        android:id="@+id/UserReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
...
