...
    <item
        android:id="@+id/bottom_nav_scan"
        android:icon="@drawable/ic_scan"
        android:title="@string/scan" />

    <item
        android:id="@+id/bottom_nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>
